Further testing :
Ubiquity tests and relation between qss and Tasks